ui/style.css
body {
  font-family: sans-serif;
  padding: 0;
  margin: 0;
}

main {
  display: flex;
}

header {
  background: #9f04ff;
  color: white;
  display: flex;
}

header a {
  color: white;
  text-decoration: none;
}

header .button,
header a {
  margin-left: 15px;
  display: inline-block;
  border: 0;
}

.logo {
  padding-right: 15px;
}

[contenteditable='true'] {
  border-bottom: 1px dashed #4eb5ff;
}

[contenteditable='true']:focus {
  outline: none;
  border-bottom-style: solid;
  font-style: italic;
}

.editor {
  width: 100%;
  border: 0;
  font-family: monospace;
  font-size: 1.1rem;
  height: 200px;
  resize: vertical;
  counter-reset: line;
}

.editor #codeArea {
  outline: none;
  padding-left: 60px !important;
}

.editor pre {
  padding-left: 60px !important;
}

.editor .editorLineNumber {
  position: absolute;
  left: 0px;
  color: #ccc;
  text-align: right;
  width: 40px;
  font-weight: 100;
}

.editor textarea:focus {
  outline: none;
}

input.input,
label.input input {
  padding: 5px;
  background: transparent;
  border: 0;
  border-bottom: 1px solid #aaa;
}

.vertical-align-center {
  display: flex;
  align-items: center;
}

.flex {
  display: flex;
}

.block {
  display: block;
}

.button {
  outline: 0;
  border: 1px solid #ccc;
  background: white;
  padding: 5px;
  cursor: pointer;
  cursor: hand;
}

.button:hover {
  background: #f2deff;
}

.button--primary {
  border: 0;
  background: #9f04ff;
  color: white;
}

.button--primary:hover {
  background: #56008c;
}

.button.material-icons {
  border: 0;
  background: transparent;
  color: #333;
  font-size: 20px;
  padding: 0;
}

.button.button--primary.material-icons {
  color: #9f04ff;
}

.button.material-icons:disabled,
.button.material-icons:disabled:hover {
  color: #ccc;
}

.flex-right {
  margin-left: auto;
}

.section,
header {
  padding: 15px;
}

.title {
  text-transform: uppercase;
  font-size: 0.9rem;
  color: #777;
  padding-bottom: 15px;
  white-space: nowrap;
}

.pages .section-title {
  font-size: 1.5rem;
  padding-bottom: 15px;
}

.connectors {
  border-right: 1px solid #ccc;
}

.connector {
  margin-bottom: 15px;
}

.pages {
  flex: 1;
}

.pages .section-title {
  display: flex;
  align-items: flex-end;
}

.pages .page-name--current {
  margin-right: 5px;
  font-size: 1.1rem;
}

.pages .page-name.button {
  margin: 0 5px;
  border-left: 0;
  border-top: 0;
  border-right: 0;
}

.panel {
  border: 1px solid #777;
  margin-bottom: 15px;
}

.panel:focus-within,
.panel:focus {
  border-color: #9f04ff;
}

.panel--hidden {
  border-color: #ccc;
}

.panel--hidden .panel-head,
.panel--empty .panel-head {
  border-bottom: 0;
}

.panel-type,
.connector-type {
  color: #777;
  padding-right: 15px;
}

.panel-head {
  border-bottom: 1px solid #ccc;
  padding: 15px;
}

.panel-controls .button {
  margin-left: 15px;
}

.panel-details {
  margin-top: 15px;
}

.panel-body {
  padding: 15px;
  position: relative;
  width: 100%;
}

.panel-order {
  width: 30px;
  margin-right: 15px;
  margin-left: 5px;
}

.panel-preview {
  background: #333;
  padding: 5px;
  color: white;
  width: 400px;
  max-width: 50%;
  max-height: 300px;
  overflow: auto;
}

.panel--empty .panel-preview {
  width: 100%;
  max-width: 100%;
}

.panel--empty .panel-body {
  display: none;
}

.new-panel {
  text-align: center;
  margin-bottom: 15px;
}

.last-run {
  font-size: 0.9rem;
  color: #777;
}

.alert {
  margin-top: 15px;
  padding: 15px 5px;
}

.alert-info {
  background: #ffe7e7;
  border: 1px solid #ffc0c0;
}

.share {
  position: relative;
}

.share-details {
  display: none;
  position: absolute;
  top: 30px;
  right: 1px;
  background: white;
  z-index: 1;
  border: 1px solid #ccc;
  padding: 15px;
  width: 400px;
  color: black;
}

.share:focus-within .share-details {
  display: block;
}

.share-details input {
  border: 1px solid;
  width: 100%;
}

.text-center {
  text-align: center;
}

